[gd_scene load_steps=15 format=4 uid="uid://b0dhswhg0jsg2"]

[ext_resource type="Shader" path="res://game/scripts_general/shaders/simple_outline.gdshader" id="1_kionx"]
[ext_resource type="Script" path="res://game/menus/hud/hud.gd" id="1_l8nwf"]
[ext_resource type="Texture2D" uid="uid://qsx2v4ikoxu6" path="res://game/menus/hud/map/hud_map_border.png" id="1_x2i81"]
[ext_resource type="Texture2D" uid="uid://cy3t4583bm16c" path="res://game/menus/hud/map/minimap_indicator.png" id="3_yvrx3"]
[ext_resource type="Texture2D" uid="uid://ds8hxgou6pflq" path="res://game/menus/hud/health/sprites/health_ball.png" id="4_1bxin"]
[ext_resource type="PackedScene" uid="uid://cjsec1bq4c16" path="res://game/menus/hud/health/health_bar.tscn" id="5_c2fhi"]
[ext_resource type="Script" path="res://game/menus/hud/map/minimap.gd" id="7_2ijle"]
[ext_resource type="FontFile" uid="uid://bp3a33y2lkkgl" path="res://wip_ase/IRIS Font.ttf" id="7_oq5t6"]
[ext_resource type="Texture2D" uid="uid://cmidruc4qlppt" path="res://game/menus/hud/map/ts_map_rooms.png" id="8_of67k"]
[ext_resource type="AudioStream" uid="uid://cb3rgo1o2hx2b" path="res://game/objects/scripts/pickup1.mp3" id="10_snig7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_se6px"]
shader = ExtResource("1_kionx")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 1.0

[sub_resource type="ViewportTexture" id="ViewportTexture_3ccit"]
viewport_path = NodePath("vp_map")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nt5u1"]
resource_name = "<null>"
texture = ExtResource("8_of67k")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/terrains_peering_bit/bottom_side = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/terrains_peering_bit/bottom_side = 0
0:2/0/terrains_peering_bit/top_side = 0
0:3/0 = 0
0:3/0/terrain_set = 0
0:3/0/terrain = 0
0:3/0/terrains_peering_bit/top_side = 0
0:4/0 = 0
0:4/0/terrain_set = 0
0:4/0/terrain = 0
0:4/0/terrains_peering_bit/right_side = 0
0:4/0/terrains_peering_bit/bottom_side = 0
0:5/0 = 0
0:5/0/terrain_set = 0
0:5/0/terrain = 0
0:5/0/terrains_peering_bit/right_side = 0
0:5/0/terrains_peering_bit/bottom_right_corner = 0
0:5/0/terrains_peering_bit/bottom_side = 0
0:5/0/terrains_peering_bit/top_side = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/terrains_peering_bit/right_side = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_right_corner = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/terrains_peering_bit/right_side = 0
1:2/0/terrains_peering_bit/bottom_right_corner = 0
1:2/0/terrains_peering_bit/bottom_side = 0
1:2/0/terrains_peering_bit/top_side = 0
1:2/0/terrains_peering_bit/top_right_corner = 0
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 0
1:3/0/terrains_peering_bit/right_side = 0
1:3/0/terrains_peering_bit/top_side = 0
1:3/0/terrains_peering_bit/top_right_corner = 0
1:4/0 = 0
1:4/0/terrain_set = 0
1:4/0/terrain = 0
1:4/0/terrains_peering_bit/right_side = 0
1:4/0/terrains_peering_bit/bottom_right_corner = 0
1:4/0/terrains_peering_bit/bottom_side = 0
1:4/0/terrains_peering_bit/left_side = 0
1:5/0 = 0
1:5/0/terrain_set = 0
1:5/0/terrain = 0
1:5/0/terrains_peering_bit/right_side = 0
1:5/0/terrains_peering_bit/bottom_right_corner = 0
1:5/0/terrains_peering_bit/bottom_side = 0
1:5/0/terrains_peering_bit/left_side = 0
1:5/0/terrains_peering_bit/top_side = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/terrains_peering_bit/right_side = 0
2:0/0/terrains_peering_bit/left_side = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/terrains_peering_bit/right_side = 0
2:1/0/terrains_peering_bit/bottom_right_corner = 0
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/bottom_left_corner = 0
2:1/0/terrains_peering_bit/left_side = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/terrains_peering_bit/right_side = 0
2:2/0/terrains_peering_bit/bottom_right_corner = 0
2:2/0/terrains_peering_bit/bottom_side = 0
2:2/0/terrains_peering_bit/bottom_left_corner = 0
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/terrains_peering_bit/top_left_corner = 0
2:2/0/terrains_peering_bit/top_side = 0
2:2/0/terrains_peering_bit/top_right_corner = 0
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 0
2:3/0/terrains_peering_bit/right_side = 0
2:3/0/terrains_peering_bit/left_side = 0
2:3/0/terrains_peering_bit/top_left_corner = 0
2:3/0/terrains_peering_bit/top_side = 0
2:3/0/terrains_peering_bit/top_right_corner = 0
2:4/0 = 0
2:4/0/terrain_set = 0
2:4/0/terrain = 0
2:4/0/terrains_peering_bit/right_side = 0
2:4/0/terrains_peering_bit/bottom_side = 0
2:4/0/terrains_peering_bit/left_side = 0
2:5/0 = 0
2:5/0/terrain_set = 0
2:5/0/terrain = 0
2:5/0/terrains_peering_bit/right_side = 0
2:5/0/terrains_peering_bit/bottom_right_corner = 0
2:5/0/terrains_peering_bit/bottom_side = 0
2:5/0/terrains_peering_bit/bottom_left_corner = 0
2:5/0/terrains_peering_bit/left_side = 0
2:5/0/terrains_peering_bit/top_side = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0
3:0/0/terrains_peering_bit/left_side = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/terrains_peering_bit/bottom_side = 0
3:1/0/terrains_peering_bit/bottom_left_corner = 0
3:1/0/terrains_peering_bit/left_side = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 0
3:2/0/terrains_peering_bit/bottom_side = 0
3:2/0/terrains_peering_bit/bottom_left_corner = 0
3:2/0/terrains_peering_bit/left_side = 0
3:2/0/terrains_peering_bit/top_left_corner = 0
3:2/0/terrains_peering_bit/top_side = 0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 0
3:3/0/terrains_peering_bit/left_side = 0
3:3/0/terrains_peering_bit/top_left_corner = 0
3:3/0/terrains_peering_bit/top_side = 0
3:4/0 = 0
3:4/0/terrain_set = 0
3:4/0/terrain = 0
3:4/0/terrains_peering_bit/right_side = 0
3:4/0/terrains_peering_bit/bottom_side = 0
3:4/0/terrains_peering_bit/bottom_left_corner = 0
3:4/0/terrains_peering_bit/left_side = 0
3:5/0 = 0
3:5/0/terrain_set = 0
3:5/0/terrain = 0
3:5/0/terrains_peering_bit/right_side = 0
3:5/0/terrains_peering_bit/bottom_side = 0
3:5/0/terrains_peering_bit/bottom_left_corner = 0
3:5/0/terrains_peering_bit/left_side = 0
3:5/0/terrains_peering_bit/top_side = 0
4:0/0 = 0
4:0/0/terrain_set = 1
4:0/0/terrain = 0
4:1/0 = 0
4:1/0/terrain_set = 1
4:1/0/terrain = 0
4:1/0/terrains_peering_bit/bottom_side = 0
4:2/0 = 0
4:2/0/terrain_set = 1
4:2/0/terrain = 0
4:2/0/terrains_peering_bit/bottom_side = 0
4:2/0/terrains_peering_bit/top_side = 0
4:3/0 = 0
4:3/0/terrain_set = 1
4:3/0/terrain = 0
4:3/0/terrains_peering_bit/top_side = 0
4:4/0 = 0
4:4/0/terrain_set = 0
4:4/0/terrain = 0
4:4/0/terrains_peering_bit/bottom_side = 0
4:4/0/terrains_peering_bit/left_side = 0
4:5/0 = 0
4:5/0/terrain_set = 0
4:5/0/terrain = 0
4:5/0/terrains_peering_bit/bottom_side = 0
4:5/0/terrains_peering_bit/bottom_left_corner = 0
4:5/0/terrains_peering_bit/left_side = 0
4:5/0/terrains_peering_bit/top_side = 0
5:0/0 = 0
5:0/0/terrain_set = 1
5:0/0/terrain = 0
5:0/0/terrains_peering_bit/right_side = 0
5:1/0 = 0
5:1/0/terrain_set = 1
5:1/0/terrain = 0
5:1/0/terrains_peering_bit/right_side = 0
5:1/0/terrains_peering_bit/bottom_side = 0
5:2/0 = 0
5:2/0/terrain_set = 1
5:2/0/terrain = 0
5:2/0/terrains_peering_bit/right_side = 0
5:2/0/terrains_peering_bit/bottom_side = 0
5:2/0/terrains_peering_bit/top_side = 0
5:3/0 = 0
5:3/0/terrain_set = 1
5:3/0/terrain = 0
5:3/0/terrains_peering_bit/right_side = 0
5:3/0/terrains_peering_bit/top_side = 0
5:4/0 = 0
5:4/0/terrain_set = 0
5:4/0/terrain = 0
5:4/0/terrains_peering_bit/right_side = 0
5:4/0/terrains_peering_bit/bottom_side = 0
5:4/0/terrains_peering_bit/bottom_left_corner = 0
5:4/0/terrains_peering_bit/left_side = 0
5:4/0/terrains_peering_bit/top_left_corner = 0
5:4/0/terrains_peering_bit/top_side = 0
5:4/0/terrains_peering_bit/top_right_corner = 0
5:5/0 = 0
5:5/0/terrain_set = 0
5:5/0/terrain = 0
5:5/0/terrains_peering_bit/right_side = 0
5:5/0/terrains_peering_bit/bottom_right_corner = 0
5:5/0/terrains_peering_bit/bottom_side = 0
5:5/0/terrains_peering_bit/bottom_left_corner = 0
5:5/0/terrains_peering_bit/left_side = 0
5:5/0/terrains_peering_bit/top_left_corner = 0
5:5/0/terrains_peering_bit/top_side = 0
6:0/0 = 0
6:0/0/terrain_set = 1
6:0/0/terrain = 0
6:0/0/terrains_peering_bit/right_side = 0
6:0/0/terrains_peering_bit/left_side = 0
6:1/0 = 0
6:1/0/terrain_set = 1
6:1/0/terrain = 0
6:1/0/terrains_peering_bit/right_side = 0
6:1/0/terrains_peering_bit/bottom_side = 0
6:1/0/terrains_peering_bit/left_side = 0
6:2/0 = 0
6:2/0/terrain_set = 1
6:2/0/terrain = 0
6:2/0/terrains_peering_bit/right_side = 0
6:2/0/terrains_peering_bit/bottom_side = 0
6:2/0/terrains_peering_bit/left_side = 0
6:2/0/terrains_peering_bit/top_side = 0
6:3/0 = 0
6:3/0/terrain_set = 1
6:3/0/terrain = 0
6:3/0/terrains_peering_bit/right_side = 0
6:3/0/terrains_peering_bit/left_side = 0
6:3/0/terrains_peering_bit/top_side = 0
6:4/0 = 0
6:4/0/terrain_set = 0
6:4/0/terrain = 0
6:4/0/terrains_peering_bit/right_side = 0
6:4/0/terrains_peering_bit/bottom_right_corner = 0
6:4/0/terrains_peering_bit/bottom_side = 0
6:4/0/terrains_peering_bit/left_side = 0
6:4/0/terrains_peering_bit/top_left_corner = 0
6:4/0/terrains_peering_bit/top_side = 0
6:4/0/terrains_peering_bit/top_right_corner = 0
6:5/0 = 0
6:5/0/terrain_set = 0
6:5/0/terrain = 0
6:5/0/terrains_peering_bit/right_side = 0
6:5/0/terrains_peering_bit/bottom_right_corner = 0
6:5/0/terrains_peering_bit/bottom_side = 0
6:5/0/terrains_peering_bit/bottom_left_corner = 0
6:5/0/terrains_peering_bit/left_side = 0
6:5/0/terrains_peering_bit/top_side = 0
6:5/0/terrains_peering_bit/top_right_corner = 0
7:0/0 = 0
7:0/0/terrain_set = 1
7:0/0/terrain = 0
7:0/0/terrains_peering_bit/left_side = 0
7:1/0 = 0
7:1/0/terrain_set = 1
7:1/0/terrain = 0
7:1/0/terrains_peering_bit/bottom_side = 0
7:1/0/terrains_peering_bit/left_side = 0
7:2/0 = 0
7:2/0/terrain_set = 1
7:2/0/terrain = 0
7:2/0/terrains_peering_bit/bottom_side = 0
7:2/0/terrains_peering_bit/left_side = 0
7:2/0/terrains_peering_bit/top_side = 0
7:3/0 = 0
7:3/0/terrain_set = 1
7:3/0/terrain = 0
7:3/0/terrains_peering_bit/left_side = 0
7:3/0/terrains_peering_bit/top_side = 0
7:4/0 = 0
7:4/0/terrain_set = 0
7:4/0/terrain = 0
7:4/0/terrains_peering_bit/right_side = 0
7:4/0/terrains_peering_bit/bottom_side = 0
7:4/0/terrains_peering_bit/bottom_left_corner = 0
7:4/0/terrains_peering_bit/left_side = 0
7:4/0/terrains_peering_bit/top_side = 0
7:4/0/terrains_peering_bit/top_right_corner = 0
7:5/0 = 0
7:5/0/terrain_set = 0
7:5/0/terrain = 0
7:5/0/terrains_peering_bit/right_side = 0
7:5/0/terrains_peering_bit/bottom_right_corner = 0
7:5/0/terrains_peering_bit/bottom_side = 0
7:5/0/terrains_peering_bit/left_side = 0
7:5/0/terrains_peering_bit/top_left_corner = 0
7:5/0/terrains_peering_bit/top_side = 0
0:6/0 = 0
0:6/0/terrain_set = 0
0:6/0/terrain = 0
0:6/0/terrains_peering_bit/right_side = 0
0:6/0/terrains_peering_bit/bottom_side = 0
0:6/0/terrains_peering_bit/top_side = 0
0:7/0 = 0
0:7/0/terrain_set = 0
0:7/0/terrain = 0
0:7/0/terrains_peering_bit/right_side = 0
0:7/0/terrains_peering_bit/bottom_side = 0
0:7/0/terrains_peering_bit/top_side = 0
0:7/0/terrains_peering_bit/top_right_corner = 0
0:8/0 = 0
0:8/0/terrain_set = 0
0:8/0/terrain = 0
0:8/0/terrains_peering_bit/right_side = 0
0:8/0/terrains_peering_bit/top_side = 0
1:6/0 = 0
1:6/0/terrain_set = 0
1:6/0/terrain = 0
1:6/0/terrains_peering_bit/right_side = 0
1:6/0/terrains_peering_bit/bottom_right_corner = 0
1:6/0/terrains_peering_bit/bottom_side = 0
1:6/0/terrains_peering_bit/left_side = 0
1:6/0/terrains_peering_bit/top_side = 0
1:6/0/terrains_peering_bit/top_right_corner = 0
1:7/0 = 0
1:7/0/terrain_set = 0
1:7/0/terrain = 0
1:7/0/terrains_peering_bit/right_side = 0
1:7/0/terrains_peering_bit/bottom_side = 0
1:7/0/terrains_peering_bit/left_side = 0
1:7/0/terrains_peering_bit/top_side = 0
1:7/0/terrains_peering_bit/top_right_corner = 0
1:8/0 = 0
1:8/0/terrain_set = 0
1:8/0/terrain = 0
1:8/0/terrains_peering_bit/right_side = 0
1:8/0/terrains_peering_bit/left_side = 0
1:8/0/terrains_peering_bit/top_side = 0
1:8/0/terrains_peering_bit/top_right_corner = 0
2:6/0 = 0
2:6/0/terrain_set = 0
2:6/0/terrain = 0
2:6/0/terrains_peering_bit/right_side = 0
2:6/0/terrains_peering_bit/bottom_side = 0
2:6/0/terrains_peering_bit/left_side = 0
2:6/0/terrains_peering_bit/top_side = 0
2:7/0 = 0
2:7/0/terrain_set = 0
2:7/0/terrain = 0
2:7/0/terrains_peering_bit/right_side = 0
2:7/0/terrains_peering_bit/bottom_side = 0
2:7/0/terrains_peering_bit/left_side = 0
2:7/0/terrains_peering_bit/top_left_corner = 0
2:7/0/terrains_peering_bit/top_side = 0
2:7/0/terrains_peering_bit/top_right_corner = 0
2:8/0 = 0
2:8/0/terrain_set = 0
2:8/0/terrain = 0
2:8/0/terrains_peering_bit/right_side = 0
2:8/0/terrains_peering_bit/left_side = 0
2:8/0/terrains_peering_bit/top_side = 0
3:6/0 = 0
3:6/0/terrain_set = 0
3:6/0/terrain = 0
3:6/0/terrains_peering_bit/right_side = 0
3:6/0/terrains_peering_bit/bottom_side = 0
3:6/0/terrains_peering_bit/bottom_left_corner = 0
3:6/0/terrains_peering_bit/left_side = 0
3:6/0/terrains_peering_bit/top_left_corner = 0
3:6/0/terrains_peering_bit/top_side = 0
3:7/0 = 0
3:7/0/terrain_set = 0
3:7/0/terrain = 0
3:7/0/terrains_peering_bit/right_side = 0
3:7/0/terrains_peering_bit/bottom_side = 0
3:7/0/terrains_peering_bit/left_side = 0
3:7/0/terrains_peering_bit/top_left_corner = 0
3:7/0/terrains_peering_bit/top_side = 0
3:8/0 = 0
3:8/0/terrain_set = 0
3:8/0/terrain = 0
3:8/0/terrains_peering_bit/right_side = 0
3:8/0/terrains_peering_bit/left_side = 0
3:8/0/terrains_peering_bit/top_left_corner = 0
3:8/0/terrains_peering_bit/top_side = 0
4:6/0 = 0
4:6/0/terrain_set = 0
4:6/0/terrain = 0
4:6/0/terrains_peering_bit/bottom_side = 0
4:6/0/terrains_peering_bit/left_side = 0
4:6/0/terrains_peering_bit/top_side = 0
4:7/0 = 0
4:7/0/terrain_set = 0
4:7/0/terrain = 0
4:7/0/terrains_peering_bit/bottom_side = 0
4:7/0/terrains_peering_bit/left_side = 0
4:7/0/terrains_peering_bit/top_left_corner = 0
4:7/0/terrains_peering_bit/top_side = 0
4:8/0 = 0
4:8/0/terrain_set = 0
4:8/0/terrain = 0
4:8/0/terrains_peering_bit/left_side = 0
4:8/0/terrains_peering_bit/top_side = 0

[sub_resource type="TileSet" id="TileSet_u2g2y"]
tile_size = Vector2i(8, 8)
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Room"
terrain_set_0/terrain_0/color = Color(0, 0.0980392, 1, 1)
terrain_set_1/mode = 2
terrain_set_1/terrain_0/name = "Door"
terrain_set_1/terrain_0/color = Color(1, 0, 0.5, 1)
custom_data_layer_0/name = "is_door_tile"
custom_data_layer_0/type = 1
sources/2 = SubResource("TileSetAtlasSource_nt5u1")

[node name="hud_obj" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l8nwf")

[node name="hud_canvas" type="CanvasLayer" parent="."]

[node name="minimap" type="Node2D" parent="hud_canvas"]
position = Vector2(188, 11)

[node name="border" type="Sprite2D" parent="hud_canvas/minimap"]
position = Vector2(19, 10)
texture = ExtResource("1_x2i81")

[node name="rendered_map" type="Sprite2D" parent="hud_canvas/minimap"]
material = SubResource("ShaderMaterial_se6px")
position = Vector2(1, 0)
scale = Vector2(0.5, 0.5)
texture = SubResource("ViewportTexture_3ccit")
centered = false

[node name="location_tracker" type="Sprite2D" parent="hud_canvas/minimap"]
position = Vector2(16, 7)
texture = ExtResource("3_yvrx3")
centered = false

[node name="health" type="Node2D" parent="hud_canvas"]

[node name="health_sprite" type="Sprite2D" parent="hud_canvas/health"]
position = Vector2(27, 26)
texture = ExtResource("4_1bxin")

[node name="health_bar" parent="hud_canvas/health" instance=ExtResource("5_c2fhi")]
position = Vector2(49, 5)

[node name="item_message" type="Node2D" parent="hud_canvas"]
visible = false

[node name="item_message_bg" type="ColorRect" parent="hud_canvas/item_message"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 43.0
offset_top = 69.0
offset_right = 197.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.117647, 0.176471, 1)

[node name="item_message_lbl" type="Label" parent="hud_canvas/item_message"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 51.0
offset_top = 77.0
offset_right = 189.0
offset_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_oq5t6")
theme_override_font_sizes/font_size = 8
text = "Health Up"
horizontal_alignment = 1

[node name="vp_map" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(70, 38)
script = ExtResource("7_2ijle")

[node name="tm_test" type="Node2D" parent="vp_map"]

[node name="Room" type="TileMapLayer" parent="vp_map/tm_test"]
use_parent_material = true
tile_map_data = PackedByteArray("AAABAAEAAgABAAAAAAACAAEAAgADAAAAAAADAAEAAgABAAMAAAAEAAEAAgADAAMAAAADAAAAAgABAAEAAAAEAAAAAgADAAEAAAAFAAAAAgAAAAAAAAADAAIAAgAAAAEAAAADAAMAAgAAAAMAAAA=")
tile_set = SubResource("TileSet_u2g2y")

[node name="Door" type="TileMapLayer" parent="vp_map/tm_test"]
z_index = 1
use_parent_material = true
tile_map_data = PackedByteArray("AAACAAEAAgAFAAAAAAADAAEAAgAHAAEAAAAEAAAAAgAFAAAAAAAFAAAAAgAHAAAAAAADAAIAAgAEAAMAAAA=")
tile_set = SubResource("TileSet_u2g2y")

[node name="tm_city_l1" type="TileMap" parent="vp_map"]
visible = false
tile_set = SubResource("TileSet_u2g2y")
format = 2
layer_0/name = "Room"
layer_0/tile_data = PackedInt32Array(327682, 65538, 0, 262147, 65538, 0, 327683, 196610, 0, 262148, 131074, 0, 262149, 131074, 0, 262150, 131074, 0, 262151, 196610, 0, 327687, 65538, 0, 327688, 131074, 0, 327689, 131074, 0, 327690, 131074, 0, 327691, 196610, 0, 131084, 65538, 0, 196620, 65538, 0, 262156, 65538, 1, 327692, 65538, 3, 131085, 196610, 0, 196621, 262146, 4, 262157, 262146, 5, 327693, 196610, 3, 196624, 2, 1, 262160, 2, 2, 327696, 2, 3)
layer_1/name = "Door"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(262147, 262146, 1, 327683, 262146, 3, 262151, 262146, 1, 327687, 327682, 3, 327688, 458754, 0, 327691, 327682, 0, 131084, 262146, 1, 196620, 262146, 3, 327692, 458754, 0)

[node name="tm_city_l2" type="TileMap" parent="vp_map"]
visible = false
tile_set = SubResource("TileSet_u2g2y")
format = 2
layer_0/name = "Room"
layer_0/tile_data = PackedInt32Array(655373, 65538, 3, 655374, 196610, 3, 589838, 196610, 1, 589837, 65538, 1, 655372, 196610, 0, 655371, 2, 4, 720907, 2, 8, 720908, 131074, 0, 720909, 131074, 0, 720910, 196610, 0, 720911, 2, 0, 655377, 65538, 0, 655378, 131074, 0, 655379, 196610, 0, 655380, 2, 0, 655381, 65538, 3, 589845, 65538, 2, 655382, 131074, 3, 589846, 131074, 2, 524309, 65538, 1, 524310, 131074, 1, 655383, 196610, 3, 589847, 196610, 2, 524311, 196610, 1, 458773, 2, 0, 393237, 2, 0)
layer_1/name = "Door"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(655372, 327682, 0, 655373, 458754, 0, 720911, 458754, 0, 720910, 327682, 0, 655379, 327682, 0, 655380, 393218, 0, 655381, 458754, 0, 524309, 262146, 3, 458773, 262146, 2, 393237, 262146, 1)

[node name="tm_lab_l1" type="TileMap" parent="vp_map"]
visible = false
tile_set = SubResource("TileSet_u2g2y")
format = 2
layer_0/name = "Room"
layer_0/tile_data = PackedInt32Array(720903, 131074, 0, 720906, 131074, 3, 720907, 196610, 8, 786443, 131074, 0, 720908, 196610, 0, 786444, 196610, 0, 720914, 196610, 3, 262164, 131074, 1, 327700, 131074, 2, 393236, 131074, 3, 720916, 2, 3, 786452, 196610, 0, 262165, 196610, 1, 327701, 196610, 2, 393237, 196610, 3, 524309, 2, 0, 720917, 65538, 0, 720918, 196610, 0, 720902, 65538, 0, 786442, 65538, 0, 720913, 131074, 3, 262163, 65538, 1, 327699, 65538, 2, 393235, 65538, 3, 458772, 2, 1, 524308, 2, 2, 589844, 2, 2, 655380, 2, 2, 393234, 196610, 0, 393233, 65538, 0, 720904, 196610, 0, 720905, 65538, 3, 655369, 65538, 1, 655370, 131074, 1, 655371, 196610, 1, 655372, 2, 3, 589836, 262146, 4, 589835, 65538, 0, 720912, 131074, 3, 655376, 393218, 5, 655377, 327682, 5, 655378, 196610, 1, 589841, 196610, 1, 589840, 65538, 1, 655375, 65538, 1, 720911, 65538, 3, 786451, 131074, 0, 786450, 131074, 0, 786449, 65538, 0, 720915, 2, 0, 786445, 2, 0)
layer_1/name = "Door"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(393236, 262146, 1, 458772, 262146, 3, 524309, 458754, 0, 524308, 327682, 0, 720917, 458754, 0, 720916, 393218, 1, 720904, 327682, 0, 720908, 262146, 1, 786444, 327682, 3, 720915, 393218, 0, 786452, 262146, 3, 720905, 458754, 0, 655371, 327682, 0, 655372, 458754, 0, 393235, 458754, 0, 393234, 327682, 0, 786445, 458754, 0, 720914, 327682, 0)

[node name="tm_lab_l2" type="TileMap" parent="vp_map"]
visible = false
tile_set = SubResource("TileSet_u2g2y")
format = 2
layer_0/name = "Room"
layer_0/tile_data = PackedInt32Array(720907, 65538, 3, 720908, 196610, 3, 655371, 65538, 2, 655372, 196610, 2, 589836, 196610, 1, 589835, 65538, 1, 720911, 65538, 3, 655375, 65538, 2, 655376, 131074, 2, 720912, 196610, 3, 720914, 196610, 0, 720913, 2, 8, 720909, 65538, 0, 720910, 196610, 0, 655377, 196610, 2, 589841, 196610, 2, 589840, 131074, 2, 589839, 65538, 2, 524304, 131074, 1, 524303, 65538, 1, 524305, 196610, 1, 458769, 2, 0)
layer_1/name = "Door"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(720908, 327682, 0, 720909, 393218, 0, 720910, 393218, 0, 720911, 458754, 0, 458769, 262146, 1, 524305, 262146, 3)

[node name="tm_forest_l1" type="TileMap" parent="vp_map"]
visible = false
tile_set = SubResource("TileSet_u2g2y")
format = 2
layer_0/name = "Room"
layer_0/tile_data = PackedInt32Array(196612, 196610, 2, 262148, 196610, 2, 327684, 196610, 3, 393220, 131074, 0, 262149, 65538, 0, 327685, 65538, 0, 393221, 131074, 0, 327686, 262146, 4, 393222, 262146, 8, 196616, 131074, 2, 262152, 131074, 3, 196617, 131074, 2, 262153, 131074, 3, 131082, 196610, 1, 196618, 196610, 2, 262154, 196610, 3, 262155, 2, 0, 327691, 2, 1, 131084, 2, 6, 327692, 2, 0, 393228, 2, 0, 458764, 65538, 0, 131085, 196610, 0, 327693, 2, 1, 393229, 2, 2, 458765, 262146, 8, 458766, 2, 0, 65551, 2, 1, 327696, 2, 0, 393232, 196610, 1, 458768, 196610, 3, 393216, 65538, 0, 393217, 196610, 0, 393218, 65538, 0, 131075, 65538, 1, 196611, 65538, 2, 262147, 65538, 2, 327683, 65538, 3, 393219, 131074, 0, 131076, 196610, 1, 262150, 131074, 0, 131079, 65538, 1, 196615, 65538, 2, 262151, 65538, 8, 131080, 131074, 1, 458760, 65538, 0, 65545, 65538, 0, 131081, 131074, 1, 458761, 131074, 0, 65546, 131074, 0, 458762, 131074, 0, 65547, 131074, 0, 393227, 2, 3, 458763, 196610, 0, 12, 2, 1, 65548, 262146, 6, 196620, 2, 2, 262156, 2, 3, 13, 65538, 0, 14, 131074, 0, 15, 196610, 0, 131087, 2, 2, 196623, 2, 2, 262159, 2, 2, 327695, 2, 3, 393231, 65538, 1, 458767, 65538, 3)
layer_1/name = "Door"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(327691, 262146, 3, 327692, 327682, 1, 393228, 262146, 3, 458764, 458754, 0, 327693, 458754, 0, 458765, 327682, 0, 393217, 327682, 0, 393218, 458754, 0, 327684, 327682, 0, 327685, 458754, 0, 262150, 262146, 1, 327686, 262146, 3, 65545, 262146, 1, 131081, 262146, 3, 262154, 327682, 0, 262155, 393218, 1, 393227, 262146, 1, 458763, 327682, 3, 12, 327682, 0, 262156, 458754, 0, 13, 458754, 0, 458766, 393218, 0, 15, 262146, 1, 65551, 262146, 3, 327695, 327682, 1, 393231, 262146, 3, 458767, 458754, 0, 327696, 458754, 0)

[node name="tm_forest_l2" type="TileMap" parent="vp_map"]
visible = false
tile_set = SubResource("TileSet_u2g2y")
format = 2
layer_0/name = "Room"
layer_0/tile_data = PackedInt32Array(720914, 131074, 0, 720913, 131074, 0, 720912, 65538, 0, 720915, 196610, 0, 720916, 65538, 0, 720917, 196610, 0, 720919, 65538, 0, 720918, 2, 0, 720920, 196610, 0, 655375, 2, 1, 720911, 2, 3, 655374, 2, 3, 589838, 262146, 4, 589837, 2, 8, 524301, 262146, 4, 524300, 65538, 0, 589836, 2, 0, 458765, 65538, 0, 458766, 65538, 8, 458767, 196610, 3, 458769, 196610, 3, 393230, 65538, 1, 393231, 196610, 1, 393233, 196610, 1, 393232, 65538, 1, 458768, 65538, 3)
layer_1/name = "Door"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(720919, 458754, 0, 720918, 393218, 0, 720917, 393218, 0, 720915, 327682, 0, 720916, 393218, 0, 393232, 458754, 0, 393231, 327682, 0, 589836, 262146, 3, 524300, 327682, 1, 655374, 327682, 0, 655375, 458754, 1, 720911, 327682, 3, 720912, 458754, 0, 524301, 458754, 3, 458765, 262146, 1)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_snig7")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
